--- a/src/index.css
+++ b/src/index.css
@@ -296,11 +296,16 @@ h1 {
 }
 
 .checkout-items {
+  display: flex;
   list-style: none;
   color: #201e1a;
   font-weight: bold;
   padding: 1rem;
-  width: 70%;
+  width: 100%;
+  justify-content: space-between;
+  flex-direction: row;
+  margin: 2rem;
+  
 
   img {
     height: 10rem;
@@ -344,4 +349,15 @@ h1 {
   align-items: center;
   padding-top: 3rem;
   gap: 3rem;
+}
+
+
+.button-more-less {
+  padding: 1rem 1rem;
+  border: none;
+  border-radius: 1rem;
+  color: black;
+  font: bold;
+  font-size: 20px;
+  width: 3rem;
 }
